--- a/templates/event-registration-form.html
+++ b/templates/event-registration-form.html
@@ -151,7 +151,7 @@
                     </div>
                     <div class="flex flex-col group cursor-pointer">
                         <p class="text-[#9740fe]">Phone:</p>
-                        <p class="text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300">+91 999 999 9999</p>
+                        <a href="tel:7863085614" class="text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300">+91 786 308 5614</a>
                     </div>
                 </div>
             </div>
