--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -124,6 +124,7 @@
 				</a>
 
 				<div class="relative flex items-center justify-center gap-4">
+					{% if isUser == True %}
 					<!-- Profile Image -->
 					<img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
 					<!-- Profile -->
@@ -136,6 +137,7 @@
 							</a>
 						</div>
 					</div>
+					{%endif%}
 					<!-- Menu Toggle Button -->
 					<button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
 				</div>
@@ -270,7 +272,7 @@
 						</div>
 						<div class="flex flex-col group cursor-pointer">
 							<p class="text-[#9740fe]">Phone:</p>
-							<p class="text-gray-300 text-sm group-hover:tranwhite transition-all duration-300">+91 999 999 9999</p>
+							<p class="text-gray-300 text-sm group-hover:tranwhite transition-all duration-300">+91 786 308 5614</p>
 						</div>
 					</div>
 				</div>
