--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -65,8 +65,8 @@
                <div class="absolute w-full h-full top-0 bg-gradient-to-t from-[#240A35] via-transparent to-transparent z-10">
                </div>
 
-               <div class="py-8 px-6">
-                    <h1 class="text-white text-3xl capitalize font-bold mb-5">Something about us</h1>
+               <div class="py-8 px-20">
+                    <h1 class="text-white text-3xl capitalize font-bold mb-5">About us</h1>
                     <p class="text-white my-5">Xenesis is an annual technical festival organized by LDRP-ITR, providing a platform for students to showcase their technical skills and compete with their peers. The festival brings together a diverse range of participants from different engineering colleges across the country.</p>
                     <p class="text-white my-5">With a plethora of events, workshops, and technical talks, Xenesis aims to create an atmosphere that fosters learning, creativity, and innovation. The festival provides an opportunity for students to engage in hands-on technical activities, gain practical experience, and enhance their problem-solving abilities.</p>
                     <p class="text-white my-5">At Xenesis, we strive to inspire and encourage the next generation of engineers and technologists. We believe that the festival is not just about competition but also about creating a sense of community and sparking a passion for technology.</p>
@@ -85,10 +85,10 @@
 
                <div class="relative flex items-center justify-center gap-4">
                     <!-- Profile Image -->
+                    {% if isUser == True %}
                     <img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
                     <!-- Profile -->
                     <div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
-               
                          <div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
                               <p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
                               <hr class="w-full my-2" />
@@ -97,6 +97,7 @@
                               </a>
                          </div>
                     </div>
+                    {%endif%}
                     <!-- Menu Toggle Button -->
                     <button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
                </div>
@@ -174,7 +175,7 @@
                          </div>
                          <div class="flex flex-col group cursor-pointer">
                               <p class="text-[#9740fe]">Phone:</p>
-                              <p class="text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300">+91 999 999 9999</p>
+                              <a href="tel:7863085614" class="text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300">+91 786 308 5614</a>
                          </div>
                     </div>
                </div>
