--- a/templates/cart.html
+++ b/templates/cart.html
@@ -59,9 +59,10 @@
 
 				<div class="relative flex items-center justify-center gap-4">
 					<!-- Profile Image -->
-					<img src="/static/event-images/4.jpg" alt="" class="w-[45px] h-[45px] rounded-full object-cover" onclick="toggleProfileDropdown()" />
+					{% if isUser == True %}
+					<img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
 					<!-- Profile -->
-					<div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">			
+					<div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
 						<div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
 							<p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
 							<hr class="w-full my-2" />
@@ -70,6 +71,7 @@
 							</a>
 						</div>
 					</div>
+					{%endif%}
 					<!-- Menu Toggle Button -->
 					<button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
 				</div>
