--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -181,23 +181,24 @@
 				<img src="/static/logoCus.png" class="h-14 w-auto" />
 			</a>
 
-			<div class="relative flex items-center justify-center gap-4 lg:hidden">
-				<!-- Profile Image -->
-				<img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
-				<!-- Profile -->
-				<div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
-			
-					<div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
-						<p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
-						<hr class="w-full my-2" />
-						<a href="/logout" class="">
-							<p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
-						</a>
-					</div>
-				</div>
-				<!-- Menu Toggle Button -->
-				<button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
-			</div>
+            <div class="relative flex items-center justify-center gap-4 lg:hidden">
+                {% if isUser == True %}
+                <!-- Profile Image -->
+                <img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
+                <!-- Profile -->
+                <div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
+                    <div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
+                        <p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+                        <hr class="w-full my-2" />
+                        <a href="/logout" class="">
+                            <p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
+                        </a>
+                    </div>
+                </div>
+                {%endif%}
+                <!-- Menu Toggle Button -->
+                <button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
+            </div>
 
 			<!-- Mobile Menu -->
             <div class="absolute top-0 left-full flex flex-col gap-5 items-center justify-center w-screen h-screen z-[999] bg-slate-900 bg-opacity-95 transition-all duration-300" id="mobile-menu">
@@ -369,7 +370,7 @@
 					</div>
 					<div class="flex flex-col group cursor-pointer">
 						<p class="text-[#9740fe]">Phone:</p>
-						<p class="text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300">+91 999 999 9999</p>
+						<a href="tel:7863085614" class="text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300">+91 786 308 5614</a>
 					</div>
 				</div>
 			</div>
