--- a/templates/event.html
+++ b/templates/event.html
@@ -53,8 +53,7 @@
 					{% if isUser == False %}
 					<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/login">Login</a></li>
 					<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/register">Register</a></li>
-					{%else%}
-					{% if isVolunteer == True%}
+					{%else%} {% if isVolunteer == True%}
 					<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/ticketVerifer">Verifer</a></li>
 					{%endif%}
 					<li class="mx-[calc(2vh)] py-2 font-semibold text-[calc(3vh)] hover:text-[#bc85ff] transition-all duration-300 border-transparent border-4 hover:border-b-[#bc85ff]"><a href="/myTicket">My Tickets</a></li>
@@ -123,7 +122,18 @@
 									<hr class="my-3" />
 									<h2 class="discription-truncate text-white">{{event.2}}</h2>
 									<div class="my-1 flex items-center justify-between">
-										<p class="text-white my-1 capitalize text-green-500">₹{{event.1}} per head</p>
+										<div class="flex flex-col">
+											{%if event.1 != "-"%}
+											<p class="text-white my-1 capitalize text-green-500">₹{{event.1}} per head</p>
+											{%else%}
+											<p class="text-white my-1 capitalize text-green-500">Individual Not Allowed</p>
+											{%endif%} 
+											{%if event.6 == True%}
+											<p class="text-white my-1 capitalize text-green-500">₹{{event.7}} per Team</p>
+											{%else%}
+											<p class="text-white my-1 capitalize text-green-500">Team Not Allowed</p>
+											{%endif%}
+										</div>
 										<div class="flex items-center gap-2">
 											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff" class="bi bi-heart cursor-pointer" viewBox="0 0 16 16" id="likeSVG{{event.0}}" onclick="handleLike('{{event.0}}')">
 												<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
@@ -146,7 +156,17 @@
 								<div class="my-3 px-4">
 									<h1 class="text-white font-bold text-2xl capitalize eventName title-truncate" data-title="{{event.0}}">{{event.0}}</h1>
 									<div class="flex items-center justify-between my-4">
-										<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.1}} per head</p>
+										<div class="flex flex-col">
+											{%if event.1 != "-"%}
+											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.1}} per head</p>
+											{%else%}
+											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">Individual Not Allowed</p>
+											{%endif%} {%if event.6 == True%}
+											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.7}} per Team</p>
+											{%else%}
+											<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">Team Not Allowed</p>
+											{%endif%}
+										</div>
 										<a class="bg-[#2F1D69] text-white font-semibold px-2 py-1 rounded-lg cursor-pointer" onclick="cardOverlayHandle('{{event.0}}')">View more</a>
 									</div>
 								</div>
@@ -202,13 +222,12 @@
 					<a href="/aboutus" class="text-2xl">About Us</a>
 					<a href="/faqs" class="text-2xl">FAQs</a>
 					{% if isUser == False %}
-						<a href="/login" class="text-2xl">Login</a>
-						<a href="/register" class="text-2xl">Register</a>
-						{%else%}
-						{% if isVolunteer == True%}
-							<a href="/ticketVerifer" class="text-2xl">Verifer</a>
-						{%endif%}
-						<a href="/myTicket" class="text-2xl">My Tickets</a>
+					<a href="/login" class="text-2xl">Login</a>
+					<a href="/register" class="text-2xl">Register</a>
+					{%else%} {% if isVolunteer == True%}
+					<a href="/ticketVerifer" class="text-2xl">Verifer</a>
+					{%endif%}
+					<a href="/myTicket" class="text-2xl">My Tickets</a>
 					{%endif%}
 				</div>
 			</nav>
@@ -256,7 +275,18 @@
 														<hr class="my-3" />
 														<h2 class="discription-truncate text-white">{{event.2}}</h2>
 														<div class="my-1 flex items-center justify-between">
-															<p class="text-white my-1 capitalize text-green-500">₹{{event.1}} per head</p>
+															<div class="flex flex-col">
+																{%if event.1 != "-"%}
+																<p class="text-white my-1 capitalize text-green-500">₹{{event.1}} per head</p>
+																{%else%}
+																<p class="text-white my-1 capitalize text-green-500">Individual Not Allowed</p>
+																{%endif%} 
+																{%if event.6 == True%}
+																<p class="text-white my-1 capitalize text-green-500">₹{{event.7}} per Team</p>
+																{%else%}
+																<p class="text-white my-1 capitalize text-green-500">Team Not Allowed</p>
+																{%endif%}
+															</div>
 															<div class="flex items-center gap-2">
 																<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff" class="bi bi-heart cursor-pointer" viewBox="0 0 16 16" id="likeSVG{{event.0}}2" onclick="handleLike('{{event.0}}')">
 																	<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
@@ -279,7 +309,17 @@
 													<div class="my-3 px-4">
 														<h1 class="text-white font-bold text-2xl capitalize eventName title-truncate">{{event.0}}</h1>
 														<div class="flex items-center justify-between my-4">
-															<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.1}} per head</p>
+															<div class="flex flex-col">
+																{%if event.1 != "-"%}
+																<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.1}} per head</p>
+																{%else%}
+																<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">Individual Not Allowed</p>
+																{%endif%} {%if event.6 == True%}
+																<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">₹{{event.7}} per Team</p>
+																{%else%}
+																<p class="text-[#2F1D69] text-lg font-semibold rounded-lg capitalize w-fit">Team Not Allowed</p>
+																{%endif%}
+															</div>
 															<a class="bg-[#2F1D69] text-white font-semibold px-2 py-1 rounded-lg cursor-pointer" onclick="cardOverlayHandle('{{event.0}}')">View more</a>
 														</div>
 													</div>
@@ -296,8 +336,13 @@
 												</div>
 											</div>
 										</swiper-slide>
+
 										{%endif%} {%endfor%}
+										
+										<div class="swiper-button-prev"></div>
+										<div class="swiper-button-next"></div>
 									</swiper-container>
+
 								</div>
 							</div>
 						</div>
@@ -355,6 +400,7 @@
 			<div class="bg-[#211e60] bg-opacity-20 md:w-fit w-full md:px-24 px-8 md:pr-36 mb-0 clip-copyrights text-gray-300 font-semibold py-8 md:text-xl text-md">&copy; 2023 Xenesis All Rights Registered</div>
 		</footer>
 
+		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 		<script>
 			function Search(element) {
 				let events = document.getElementsByClassName("event");
@@ -386,6 +432,13 @@
 				}
 				document.getElementById(id + "Content").scrollIntoView({ behavior: "smooth", block: "center", inline: "nearest" });
 			}
+
+			var swiper = new Swiper(".mySwiper", {
+				navigation: {
+					nextEl: ".swiper-button-next",
+					prevEl: ".swiper-button-prev",
+				},
+			});
 		</script>
 		<script src="/static/js/eventCardEffects.js"></script>
 		<script src="/static/js/eventSlider.js"></script>
