--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -55,13 +55,13 @@
             <div class="px-8 mx-auto sm:px-10 lg:px-12 max-w-7xl">
                 <div class="max-w-2xl mx-auto text-center">
                     <h2 class="text-3xl font-semibold tracking-tight text-white sm:text-4xl lg:text-5xl">Frequently asked questions</h2>
-                    <p class="mt-4 text-base font-normal leading-7 text-white lg:text-lg lg:mt-6 lg:leading-8">Ask everything you need to know about our products and services.</p>
+                    <!-- <p class="mt-4 text-base font-normal leading-7 text-white lg:text-lg lg:mt-6 lg:leading-8">Ask everything you need to know about our products and services.</p> -->
                 </div>
                 <div class="max-w-5xl mx-auto mt-12 overflow-hidden border border-gray-200 divide-y divide-gray-200 sm:mt-16 rounded-xl">
                     <div data-aos="fade-right" class="faq">
                         <h3>
                             <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg text-base font-semibold text-left text-white sm:p-6" aria-expanded="false">
-                                <span> Q. How can i register for event? </span>
+                                <span> Q. How can I participate in an event? </span>
                                 <span aria-hidden="true" class="ml-4" style="display: none">
                                     <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" class=""></path>
@@ -76,14 +76,15 @@
                         </h3>
                         <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
                             <div class="px-6 pb-6">
-                                <p class="text-base text-white">A. You can through our website or wait for our capaining team to come to your campus.</p>
+                                <p class="text-base text-white">A. You are required to register first. Once you log in to the website, you can participate in any event.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div data-aos="fade-right" class="faq">
                         <h3>
                             <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg font-semibold text-left text-white sm:p-6" aria-expanded="false">
-                                <span> Q. How can i get the details of events that i participated? </span>
+                                <span> Q. How can I get the details of the events in which I have participated? </span>
                                 <span aria-hidden="true" class="ml-4" style="display: none">
                                     <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"></path>
@@ -98,14 +99,15 @@
                         </h3>
                         <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
                             <div class="px-6 pb-6">
-                                <p class="text-base text-white">A. You will get a ticket for all the details of your events.</p>
+                                <p class="text-base text-white">A. Once you have made the payment for the events you have registered for, you will see the tickets with QR codes in the MyTickets section.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div data-aos="fade-right" class="faq">
                         <h3>
                             <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg font-semibold text-left text-white sm:p-6" aria-expanded="false">
-                                <span> Q. How can i access tickets for the events? </span>
+                                <span> Q. How can I access tickets for the events? </span>
                                 <span aria-hidden="true" class="ml-4" style="display: none">
                                     <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"></path>
@@ -120,14 +122,14 @@
                         </h3>
                         <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
                             <div class="px-6 pb-6">
-                                <p class="text-base text-white">A. You can login to the website or mobile application and access your tickets.</p>
+                                <p class="text-base text-white">A. Once you log in to the website, you can see the tickets with QR codes in the MyTickets section. At the time of the event, you are required to show the QR code to the volunteer/organizer.</p>
                             </div>
                         </div>
                     </div>                  
                     <div data-aos="fade-right" class="faq">
                         <h3>
                             <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg font-semibold text-left text-white sm:p-6" aria-expanded="false">
-                                <span> Q. How can i know what events are there? </span>
+                                <span> Q. Can I register for multiple events? </span>
                                 <span aria-hidden="true" class="ml-4" style="display: none">
                                     <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"></path>
@@ -142,32 +144,11 @@
                         </h3>
                         <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
                             <div class="px-6 pb-6">
-                                <p class="text-base text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution.</p>
+                                <p class="text-base text-white">A. Yes, users can register for multiple events. Users are required to make sure that the event times do not overlap.</p>
                             </div>
                         </div>
                     </div>
-                    <div data-aos="fade-right" class="faq">
-                        <h3>
-                            <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg font-semibold text-left text-white sm:p-6" aria-expanded="false">
-                                <span> Q. Will I get money back if I am not satisfied? </span>
-                                <span aria-hidden="true" class="ml-4" style="display: none">
-                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"></path>
-                                    </svg>
-                                </span>
-                                <span aria-hidden="true" class="ml-4">
-                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-                                    </svg>
-                                </span>
-                            </button>
-                        </h3>
-                        <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
-                            <div class="px-6 pb-6">
-                                <p class="text-base text-white">A. You can visit our website or moblie application and go to the events page and get the required information.</p>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
